Add new locations to index.html data

--- a/index.html
+++ b/index.html
@@ -440,7 +440,9 @@
         ["B","Puente Gris",117.64],
         ["Punto Sandwich","Puente Gris",92.53],
         ["Punto Sandwich","Capilla",181.42],
-        ["Punto Sandwich","H",112.18]
+        ["Punto Sandwich","H",112.18],
+        ["Puente Gris","Portón Café",566.55],
+        ["Meson","CAF",81.63]
       ];
 
       const markerStyles = {
